Fix overflow only for mobile

--- a/src/components/UI/Card.module.css
+++ b/src/components/UI/Card.module.css
@@ -4,6 +4,7 @@
     background-color: #1b1b1b;
     box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, .26);
     width: 90%;
+    height: auto;
     cursor: default;
 }
 
